<resources>
    <string name="app_name">MotivationAndProductivityApp</string>

    <string-array name="hoursSpinnerValues">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>8 hours</item>
        <item>12 hours</item>
    </string-array>

    <string-array name="custom_weekdays">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>San</item>
    </string-array>

    <string-array name="custom_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

                                  <!--Floating Menu-->
    <string name="repeating_menu_button">Repeating</string>
    <string name="weekly_menu_button">Weekly</string>
    <string name="calendar_menu_button">Calendar</string>
    <string name="help_menu_button">Help</string>

                                  <!--Floating Menu Toast-->
    <string name="repeating_menu_toast">Repeating Reminder Menu</string>
    <string name="weekly_menu_toast">Weekly Reminder Menu</string>
    <string name="calendar_menu_toast">Activity Tracker Calendar Menu</string>
    <string name="help_menu_toast">Help Menu</string>

                        <!--    Repeating Reminder Card View-->
    <string name="notificationName">Repeating Reminder</string>
    <string name="notifyEvery">Remind me every :</string>
    <string name="fromTxt">From:</string>
    <string name="untilTxt">Until:</string>

                        <!--    Weekly Reminder Card View-->
    <string name="weeklyReminderName">Weekly Reminder</string>
    <string name="scheduleReminderTxt">Schedule Reminder:</string>

                        <!--Week days-->
    <string name="mondayCheckBox">Mon</string>
    <string name="tuesdayCheckBox">Tue</string>
    <string name="wednesdayCheckBox">Wed</string>
    <string name="thursdayCheckBox">Thu</string>
    <string name="fridayCheckBox">Fri</string>
    <string name="saturdayCheckBox">Sat</string>
    <string name="sundayCheckBox">Sun</string>

                        <!--    Calendar Reminder Card View-->
    <string name="calendarName">Activity Tracker Calendar</string>
    <string name="countDaysText">Days Counter: </string>

    <string name="delete_reminder">Delete Reminder?</string>
    <string name="delete_calendar">Delete Calendar?</string>

                        <!--  Max Values  -->
    <string name="maxRepeating">Repeating Reminder Limit</string>
    <string name="maxWeekly">Weekly Reminder Limit</string>
    <string name="maxCalendar">Calendar Limit</string>

</resources>