<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="10dp">

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/material_design_android_floating_action_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="9dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"

        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="#1A000000"

        fab:menu_buttonSpacing="8dp"
        fab:menu_colorNormal="@color/buttonColor"
        fab:menu_colorPressed="#BAE7F0FD"
        fab:menu_colorRipple="#99d4d4d4"
        fab:menu_fab_label=""
        fab:menu_fab_show_animation="@anim/fab_scale_up"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_menu_button"
        fab:menu_labels_colorPressed="@color/buttonColor"
        fab:menu_labels_colorRipple="@color/buttonColor"
        fab:menu_labels_cornerRadius="25dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_style="@style/MenuLabels"
        fab:menu_labels_textColor="#C80A0A0A"
        fab:menu_labels_textSize="16sp"
        fab:menu_openDirection="down"
        fab:menu_shadowColor="#41000000"
        fab:menu_shadowRadius="3dp"
        fab:menu_shadowXOffset="0dp"
        fab:menu_shadowYOffset="0dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            android:src="@drawable/ic_help_button"
            fab:fab_colorNormal="@color/buttonColor"
            fab:fab_colorPressed="#BAE7F0FD"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_label="@string/help_menu_button"

            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            android:src="@drawable/ic_monthrepeat_button"
            fab:fab_colorNormal="@color/buttonColor"
            fab:fab_colorPressed="#BAE7F0FD"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_label="@string/calendar_menu_button"

            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            android:src="@drawable/ic_weekrepeat_button"
            fab:fab_colorNormal="@color/buttonColor"
            fab:fab_colorPressed="#BAE7F0FD"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_label="@string/weekly_menu_button"

            />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="9dp"
            android:src="@drawable/ic_repeating_notification"
            fab:fab_colorNormal="@color/buttonColor"
            fab:fab_colorPressed="#BAE7F0FD"
            fab:fab_colorRipple="#99d4d4d4"
            fab:fab_label="@string/repeating_menu_button"

            />
    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>