<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weeklyReminderParent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:outlineAmbientShadowColor="@color/purple_700"
    android:outlineSpotShadowColor="@color/teal_700"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/gradient_panel">

        <EditText
            android:id="@+id/weeklyReminderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.5dp"
            android:layout_marginTop="-7dp"
            android:ellipsize="end"
            android:fontFamily="@font/sans_francisco_pro_text_light"
            android:hint="@string/weeklyReminderName"
            android:inputType="text"
            android:lines="1"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="#CC000000"
            android:textCursorDrawable="@null"
            android:textFontWeight="900"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weeklyReminderName"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/sans_francisco_pro_text_semibold"
            android:text="@string/scheduleReminderTxt"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/weeklyReminderHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weeklyReminderName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/txt"
            android:background="@color/buttonColor"
            android:clickable="true"
            android:fontFamily="@font/sans_francisco_pro_display_regular"
            android:padding="2dp"
            android:text="00:00"
            android:textSize="21sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/weeklyReminderSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@+id/deleteWeeklyReminderPanel"
            android:gravity="fill"
            app:thumbTint="@color/switch_thumb_selector"
            app:trackTint="@color/switch_track_selector"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/deleteWeeklyReminderPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginRight="6dp"
            android:background="@null"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:src="@drawable/ic_delete"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <RelativeLayout
            android:id="@+id/checkBoxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:elevation="5dp">

            <CheckBox
                android:id="@+id/weeklyReminderMondayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/background"
                android:button="@color/black"
                android:buttonTint="@color/background"
                android:buttonTintMode="multiply"
                android:drawableBottom="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/sans_francisco_pro_text_light"
                android:gravity="center"
                android:paddingLeft="3dp"
                android:scaleX="1.23"
                android:scaleY="1.23"
                android:text="@string/mondayCheckBox"
                android:textColor="#CC000000"
                android:textFontWeight="600"

                android:textSize="13.1sp"
                android:theme="@style/checkbox_style" />

            <CheckBox
                android:id="@+id/weeklyReminderTuesdayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/weeklyReminderMondayCheckBox"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/sans_francisco_pro_text_light"
                android:gravity="center"
                android:scaleX="1.23"
                android:scaleY="1.23"
                android:text="@string/tuesdayCheckBox"
                android:textColor="#CC000000"
                android:textFontWeight="600"
                android:textSize="13.1sp"
                android:theme="@style/checkbox_style" />

            <CheckBox
                android:id="@+id/weeklyReminderWednesdayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/weeklyReminderTuesdayCheckBox"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/sans_francisco_pro_text_light"
                android:gravity="center"
                android:scaleX="1.23"
                android:scaleY="1.23"
                android:text="@string/wednesdayCheckBox"
                android:textColor="#CC000000"
                android:textFontWeight="600"
                android:textSize="13.1sp"
                android:theme="@style/checkbox_style" />

            <CheckBox
                android:id="@+id/weeklyReminderThursdayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@id/weeklyReminderWednesdayCheckBox"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/sans_francisco_pro_text_light"
                android:gravity="center"
                android:scaleX="1.23"
                android:scaleY="1.23"
                android:text="@string/thursdayCheckBox"
                android:textColor="#CC000000"
                android:textFontWeight="600"
                android:textSize="13.1sp"
                android:theme="@style/checkbox_style" />

            <CheckBox
                android:id="@+id/weeklyReminderFridayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/weeklyReminderThursdayCheckBox"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/sans_francisco_pro_text_light"
                android:gravity="center"
                android:scaleX="1.23"
                android:scaleY="1.23"
                android:text="@string/fridayCheckBox"
                android:textColor="#CC000000"
                android:textFontWeight="600"
                android:textSize="13.1sp"
                android:theme="@style/checkbox_style" />

            <CheckBox
                android:id="@+id/weeklyReminderSaturdayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/weeklyReminderFridayCheckBox"
                android:button="@null"
                android:buttonTint="#1841be"
                android:buttonTintMode="add"
                android:drawableBottom="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/sans_francisco_pro_text_light"
                android:gravity="center"
                android:scaleX="1.23"
                android:scaleY="1.23"
                android:text="@string/saturdayCheckBox"
                android:textColor="#CC000000"
                android:textFontWeight="600"
                android:textSize="13.1sp"
                android:theme="@style/checkbox_style" />

            <CheckBox
                android:id="@+id/weeklyReminderSundayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/weeklyReminderSaturdayCheckBox"
                android:button="@null"
                android:drawableBottom="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/sans_francisco_pro_text_light"
                android:gravity="center"
                android:scaleX="1.23"
                android:scaleY="1.23"
                android:text="@string/sundayCheckBox"
                android:textColor="#CC000000"
                android:textFontWeight="600"
                android:textSize="13.1sp"
                android:theme="@style/checkbox_style"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>